# phi4-n-particle

./: CMakeLists.txt  README  README.md  action.cpp  action.h  calculate_corr.cpp  calculate_toytest.cpp  complex.cpp  complex.h  correlators.cpp  correlators.h  generator_singleton.h  metropolis.cpp  metropolis.h  parameters.h  scalar.cpp  scalar.h  types.h
start_config/: scalar_6_6_6_8_6000.txt
